# Osiris

./: Osiris.sln
Source/: CMakeLists.txt  Endpoints.h  Intrinsics.cpp  LinuxEndpoints.s
Source/CS2/Classes/: CCSPlayer_WeaponServices.h  CEntitySubclassVDataBase.h  CUtlFilenameSymbolTable.h  CUtlString.h  ClientModeCSNormal.h  ConVarTypes.h  GlobalVars.h  Panorama.h
Source/CS2/Constants/: AspectRatio.h  ColorConstants.h  TeamNumberConstants.h
Source/FeatureHelpers/: ClipSpaceCoordinates.h  ConVarAccessor.h  EntityFromHandleFinder.h  HudInWorldPanelContainer.h  HudInWorldPanelIndex.h  LifeState.h  PanelStylePropertyFactory.h  PanelStyleSetter.h  PanoramaTransformations.h  RenderingHookEntityLoop.h  StylePropertiesSymbolsAndVMTs.h  StylePropertySymbolMap.h  TeamNumber.h
Source/FeatureHelpers/Sound/: SoundWatcherState.h  WatchedSounds.h
Source/Features/: FeaturesStates.h
Source/Features/Hud/: DefusingAlert.h  HudFeatures.h  KillfeedPreserver.h
Source/Features/Sound/: SoundFeatures.h  WeaponReloadVisualizer.h  WeaponScopeVisualizer.h
Source/GameClasses/: FileNameSymbolTable.h  FileSystem.h  PanoramaLabel.h  PlantedC4.h
Source/GameDLLs/: Tier0Dll.h
Source/GlobalContext/: FullGlobalContext.h  PartialGlobalContext.h
Source/Helpers/: Bits.h  PanoramaPanelPointer.h
Source/HookDependencies/: HookDependenciesBuilder.h
Source/Hooks/: LoopModeGameHook.h  PeepEventsHook.h
Source/MemoryAllocation/: FreeMemoryRegion.h
Source/MemoryPatterns/: CvarPatterns.h  GameRulesPatterns.h  MemAllocPatterns.h  PanoramaImagePanelPatterns.h  PanoramaLabelPatterns.h  PanoramaUiPanelPatterns.h  SdlPatterns.h  SoundSystemPatterns.h  WeaponServicesPatterns.h
Source/MemorySearch/: BytePattern.h  BytePatternConverter.h  BytePatternLiteral.h  BytePatternStorage.h  HybridPatternFinder.h  PatternFinderSIMD.h  PatternFinderScalar.h  PatternSearchResult.h  PatternStringWildcard.h
Source/Platform/: DynamicLibrary.h
Source/SDL/: SdlConstants.h
Source/Utils/: BitFlags.h  CString.h  CharUtils.h  FlagsBuilder.h  GenericFunctionPointer.h  GenericPointer.h  HexChars.h  InRange.h  ManuallyDestructible.h  MemorySection.h  SpanSlice.h  StringBuilder.h  StringParser.h  TypeIndex.h
Source/Vmt/: VmtCopy.h  VmtLengthCalculator.h
Tests/: CMakeLists.txt
(+92 files in other folders)
